Update JVM config recommendations in docs